# subroll

./: README.md  pyproject.toml  setup.cfg  socktest.py  test.py
src/subroll/: __init__.py  main.py
