[metadata]
name = subroll
version = 0.0.1
author = witer33
author_email = dev@witer33.com
description = Automatically choose a random IPv6 address from your subnet.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/witer33/subroll
install_requires =
    requests
project_urls =
    Bug Tracker = https://github.com/witer33/subroll/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src